tests/typing/errors/shadow/builtin-term-var.expected
File "tests/typing/errors/shadow/builtin-term-var.smt2", line 2, character 15-19:
2 | (assert (let ((true false)) true))
                   ^^^^
Error Duplicate declaration of `true`, which is already defined by a builtin theory
